--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ a {
 .countdown {
     margin: 10px;
 }
+.progress {
+    --height: 10px;
+    padding: 10px;
+    --indicator-color: var(--sl-color-indigo-700);
+}
 .column {
     margin: 10px;
     margin-bottom: 2.5px;
