--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ a {
     --height: 10px;
     padding: 10px;
     --indicator-color: var(--sl-color-indigo-700);
+    --track-color: #1e293b;
 }
 .column {
     margin: 10px;
@@ -100,6 +101,9 @@ a {
     flex-grow: 1;
     margin-top: 20px;
     max-width: calc(100% - 10px);
+}
+.infotext {
+    margin-top: 30px;
 }
 .card {
     margin: 10px;
