--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 body {
     font-family: "Nunito Sans", sans-serif;
-    background-color: #f0f0f0;
+    background-color: #ebebef;
     margin: 0;
     padding: 0;
     display: flex;
@@ -52,7 +52,7 @@ a {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    background: #fff;
+    background: #f5f5ff;
     width: 100%;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
 }
@@ -82,7 +82,7 @@ a {
     --height: 10px;
     padding: 10px;
     --indicator-color: var(--sl-color-indigo-700);
-    --track-color: #1e293b;
+    --track-color: #c6c6c7;
 }
 .column {
     margin: 10px;
@@ -133,18 +133,21 @@ a {
     flex-grow: 2;
     text-align: right;
 }
+.sl-theme-dark sl-progress-bar {
+    --track-color: #1e293b;
+}
 .sl-theme-dark sl-card::part(base) {
     background: #1f2937;
     border: solid 1px #334155;
 }
 .dark-mode-body {
     background-color: #111827;
-    color: #fff;
+    color: #f5f5ff;
 }
 .dark-mode-container {
-    color: #fff;
+    color: #f5f5ff;
 }
 .dark-mode-header {
     background-color: #1f2937;
-    color: #fff;
+    color: #f5f5ff;
 }
